Prevent wrapping on keywords-wrapper label

--- a/styles/article.less
+++ b/styles/article.less
@@ -94,6 +94,7 @@
       .label {
         font-weight: 600;
         line-height: 25.8px;
+        white-space: nowrap;
       }
       .keywords {
         display: flex;
